--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>navigation-bar</title>
+    <title>DREAM BIKE CORNER</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./image/images.jfif" type="image/x-icon">
 </head>
 
 <body>
